<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/movieFragment"
        android:icon="@drawable/ic_movie"
        android:title="@string/title_movie" />
    <item
        android:id="@+id/tvShowFragment"
        android:icon="@drawable/ic_tv_show"
        android:title="@string/title_tv_show" />
    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite"/>
</menu>